--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -365,7 +365,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/jembatan.jpg") top center no-repeat;
+  background: url("../img/sawah.jpeg") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 82px;
